awx/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-ingress
  namespace: awx
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
      - awx.ovoxcloud.com
      secretName: ovoxcloud.com-tls
  rules:
    - host: awx.ovoxcloud.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: awx-tower-service
                port:
                  number: 80
